# credit-card-fraud

./: .env.example  .gitignore  README.md  analysis.ipynb  analysis.py  clean_data.py  informe_fraude.ipynb  preprocess.py  pyproject.toml  split_data.py  train_models.py
eda_output/: conclusiones_eda.md
