[project]
name = "credit-card-fraud"
version = "0.1.0"
description = "Predicting Credit Card Fraud"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "ipykernel>=7.2.0",
    "joblib>=1.4.0",
    "kagglehub[pandas-datasets]>=1.0.1",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]
